# 4diac-kafka

./: README.md
4diac-FORTE/Build_kafka_msbuild/src/com/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/HTTP/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/modbus/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/mqtt_paho/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/opc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/opc_ua/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/powerlink/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/ros/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/tsn/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/com/xquery/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Arithmetic/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/BistableElements/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/BitwiseOperators/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/CharacterString/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Comparison/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Conversion/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Conversion/BCD/: INSTALL.vcxproj  INSTALL.vcxproj.filters  (+1 more)
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Counters/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/EdgeDetection/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Numerical/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Selection/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/IEC61131-3/Timers/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/PLC01A1/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/ads/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/arrowhead/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/conmeleon_c1/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/convert/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/embrick/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/i2c_dev/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/lms_ev3/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/mlpi/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/odroid/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/piface/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/raspberry_sps/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/reconfiguration/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/rt_events/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/sysfs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/umic/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/utils/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
4diac-FORTE/Build_kafka_msbuild/src/modules/wagokbus/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
(+675 files in other folders)
