SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/HTTP")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}HTTP")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/modbus")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}modbus")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/mqtt_paho")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}mqtt_paho")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/opc")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}opc")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/opc_ua")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}opc_ua")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/powerlink")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}powerlink")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/ros")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}ros")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/tsn")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}tsn")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/xquery")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}xquery")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
