SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/IEC61131-3")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}IEC61131-3")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/PLC01A1")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}PLC01A1")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/ads")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}ads")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/arrowhead")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}arrowhead")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/conmeleon_c1")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}conmeleon_c1")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/convert")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}convert")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/embrick")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}embrick")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/i2c_dev")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}i2c_dev")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/lms_ev3")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}lms_ev3")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/mlpi")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}mlpi")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/odroid")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}odroid")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/piface")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}piface")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/raspberry_sps")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}raspberry_sps")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/reconfiguration")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}reconfiguration")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/rt_events")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}rt_events")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/sysfs")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}sysfs")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/umic")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}umic")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/utils")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}utils")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
SET(SOURCE_GROUP_BACKUP "${SOURCE_GROUP}")
SET(SOURCE_GROUP "${SOURCE_GROUP}/wagokbus")
ADD_SUBDIRECTORY("${FORTE_MODULE_PATH}wagokbus")
SET(SOURCE_GROUP "${SOURCE_GROUP_BACKUP}")
